crux-mir-comp/test/symb_eval/comp/spec_struct.good
test spec_struct/3a1fbbbh::f_test[0]: ok
test spec_struct/3a1fbbbh::use_f[0]: FAILED

failures:

---- spec_struct/3a1fbbbh::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/comp/spec_struct.rs:51:5: 51:30: error: in spec_struct/3a1fbbbh::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/spec_struct.rs:51:5:
[Crux]   	d < 10

[Crux] Overall status: Invalid.
